# wit-bindgen

./: the_world.rs
crates/zig/: Cargo.toml
crates/zig/src/: lib.rs
crates/zig/tests/: codegen.rs
tests/runtime/: main.rs
tests/runtime/numbers/: wasm.zig
tests/runtime/smoke/: wasm.zig
