[package]
name = "wit-bindgen-zig"
authors = ["Nico <nicolasbrassard10401@gmail.com>"]
version = "0.13.0"
edition.workspace = true
repository = 'https://github.com/bytecodealliance/wit-bindgen'
license = "Apache-2.0 WITH LLVM-exception"
homepage = 'https://github.com/bytecodealliance/wit-bindgen'
description = """
Zig bindings generator for WIT and the component model, typically used
through the `wit-bindgen-cli` crate.
"""

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers' }
